add provider in json

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,12 @@
     	   "vivdub\\CommingSoon\\": "src/",
     	   "Tests\\": "tests/"
        }
-    }
+    },
+    "extra": {
+    	"laravel": {
+        "providers": [
+      	  "vivdub\\CommingSoon\\CommingSoonProvider"
+        ]
+      }
+    }	
 }
