--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vivdub/CommingSoon",
+    "name": "vivdub/commingsoon",
     "description": "Cooming soon template for laravel",
     "type": "library",
     "license": "MIT",
@@ -12,20 +12,20 @@
     "require": {},
     "autoload": {
     	"psr-4": {
-    	   "vivdub\\CommingSoon\\": "src/",
+    	   "vivdub\\commingsoon\\": "src/",
     	   "App\\": "app/"
        }
     },
     "autoload-dev": {
     	"psr-4": {
-    	   "vivdub\\CommingSoon\\": "src/",
+    	   "vivdub\\commingsoon\\": "src/",
     	   "Tests\\": "tests/"
        }
     },
     "extra": {
     	"laravel": {
         "providers": [
-      	  "vivdub\\CommingSoon\\CommingSoonProvider"
+      	  "vivdub\\commingsoon\\CommingSoonProvider"
         ]
       }
     }	
